test in progress

--- a/index.html
+++ b/index.html
@@ -4,26 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather App JavaScript</title>
-    <link rel="stylesheet" href="font/Rimouski.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-
     <div class="container">
-
         <h1 style="background-color: rgba(0, 0, 255, 0.164);">Fab Weather</h1><br>
         <div class="app-title">
-
-
             <p>Weather</p>
         </div>
         <form class="js-form">
             <input type="text" class="search-input js-search-input" placeholder="Search weather" autofocus>
             <button type="submit" class="btn">Go</button>
-          </form>
-  
+        </form>
+
         <div class="notification"> </div>
         <div class="weather-container">
             <div class="weather-icon">
@@ -40,8 +34,7 @@
             </div>
         </div>
     </div>
-
-    <script src="main2.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
