work inp rogres

--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1 style="background-color: rgba(0, 0, 255, 0.164);">Fab Weather</h1><br>
-        <div class="app-title">
-            <p>Weather</p>
-        </div>
-        <form class="js-form">
-            <input type="text" class="search-input js-search-input" placeholder="Search weather" autofocus>
-            <button type="submit" class="btn">Go</button>
-        </form>
 
+    <div class="container">
+
+        <h1 style="background-color:rgba(0, 0, 255, 0.383);"><strong>Your local Weather<strong></strong></h1>
+        <div class="app-title">
+        </div>
         <div class="notification"> </div>
         <div class="weather-container">
             <div class="weather-icon">
@@ -34,7 +30,8 @@
             </div>
         </div>
     </div>
-<script src="main.js"></script>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
