--- a/index.html
+++ b/index.html
@@ -1,83 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Fab Weather App </title>
-        <link rel="stylesheet" href="style.css" />
 
-    </head>
-    <body>
-        <section class="top-banner" style="padding: 10px;">
-            <div class="container">
-           <div class="top-container">
-            <h1 class="heading">Fab Weather App</h1>
-            <div>
-                <h3>🌏Local Weather</h3>
-                <button class="button-card local-weather-btn d-none" type="button">
-                    <h2 class="city-name">
-                      <span>${name}</span>
-                      <sup>${sys.country}</sup>
-                    </h2>
-                  </button>
-                <!-- <div class="temperature-value">
-                    <p>- °<span>C</span></p>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Fab Weather App </title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <section class="top-banner" style="padding: 10px;">
+        <div class="container">
+            <div class="top-container">
+                <h1 class="heading">Fab Weather App</h1>
+                <div>
+                    <h3>🌏Local Weather</h3>
+                    <button class="button-card local-weather-btn d-none" type="button">
+                        <h2 class="city-name">
+                            <span>${name}</span>
+                            <sup>${sys.country}</sup>
+                        </h2>
+                    </button>
                 </div>
-                <div class="temperature-description">
-                    <p>-</p>
-                </div>
-                <div class="location">
-                    <p>-</p>
-                    <div class="weather-icon">
-                        <img src="icons/unknown.png" alt="" />
-                    </div>
-                    <div class="info">
-                        <p>
-                            Hey according with your coordinate<br />
-                            this is your location
-                        </p>
-                    </div>
-                </div> -->
             </div>
-           </div>
-                <form>
-                    <input type="text" placeholder="Search for a city" autofocus />
-                    <button type="submit">👍SUBMIT</button>
-                    <span class="msg"></span>
-                </form>
+            <form>
+                <input type="text" placeholder="Search for a city" autofocus />
+                <button type="submit">👍SUBMIT</button>
+                <span class="msg"></span>
+            </form>
+        </div>
+    </section>
+    <div style="display: flex;">
+        <div class="cards">
+            <div class="notification"></div>
+        </div>
+        <section class="city-section">
+            <div class="containe-cards">
+                <ul class="cities"></ul>
             </div>
         </section>
-        <div style="display: flex;">
-            <div class="cards">
-                <div class="notification"></div>
-
+    </div>
+    <div id="weather-modal" class="modal city-section">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="city-name" ;">
+                    <span></span>
+                    <sup></sup>
+                </h2>
+                <span class="close">&times;</span>
             </div>
-            <section class="ajax-section">
-                <div class="containe-cards">
-                    <ul class="cities"></ul>
-                </div>
-            </section>
-        </div>
+            <div class="modal-body">
+                <p class="city-temp"></p>
+                <p class="weather-text"></p>
+                <img class="weather-icon" src="" />
+            </div>
+            <script src="main.js"></script>
+</body>
 
-        <div id="weather-modal" class="modal ajax-section">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="city-name";">
-                        <span></span>
-                        <sup></sup>
-                      </h2>
-                  <span class="close">&times;</span>
-
-                </div>
-                <div class="modal-body">
-                    <p class="city-temp" ></p>
-                    <p class="weather-text"><strong></p>
-                    <img class="weather-icon" src=""/>
-                   
-                </div>
-
-              </div>
-          </div>
-
-        <script src="main.js"></script>
-    </body>
 </html>
